tests/errors/syntax/type-no-brace.fn
---
Description: Type declaration with no opening brace
Expected: FN1007
---

type Broken

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
